# etl-crypto-demo

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
airflow/: docker-compose.yaml  setup.sh
dashboard/config/: settings.py
dashboard/project/: settings.py
database/: .env  setup.sh
docs/: Interesting_Addresses.csv  development.md  future.md  notepad.ipynb  notes.ipynb  scaling-up.md  todo.md
docs/daily_updates/: 2022-10-20.md  2022-10-21.md  2022-10-24.md  2022-10-25.md  2022-10-27.md  2022-10-28.md  2022-10-29.md  2022-10-30.md  2022-10-31.md
src/: compose.yml
src/airflow/: readme.md
src/airflow/container/: build-run.sh  it.sh  run.sh
src/airflow/dags/: account_balances.py  eth_prices.py
src/analytics/: readme.md
src/analytics/container/: Dockerfile  build.sh  run.sh  superset_config.py
src/api/: Pipfile  pyproject.toml  readme.md
src/database/: readme.md
src/database/container/: setup.sh
src/database/sql/: account_list.sql  create_airflow_db.sql  create_airflow_user.sql  price_by_pair.sql  price_moving_averages.sql
src/gateway/conf.d/: etl.cody.averett.cloud.conf
src/nginx/: nginx.conf  readme.md
src/nginx/conf.d/: etl.cody.averett.cloud.conf
src/nginx/config/: nginx.conf
src/nginx/container/: build-run.sh  build.sh  dockerfile  it.sh  run.sh
src/nginx/content/: index.html
src/ods/sql/: account_list.sql
src/scheduler/container/: build.sh  run.sh
src/scheduler/dags/: dagumit.py
src/service/: Pipfile  manage.py  run_dev.sh  run_prod.sh  start_app.sh
src/slither/: it.sh  readme.md  slither_usage.md
(+71 files in other folders)
