[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = "Django dashboard for exploring data captured from an etl process."
authors = ["Cody Averett <codyaverett@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
django-restframework = "^0.0.1"
Markdown = "^3.4.1"
django-filter = "^22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
